--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@ div {
 	width: 970px;
 	margin: 0 auto;
 	padding: 0px 15px;
+	box-sizing: border-box;
 }
 
 /*Navbar*/
@@ -60,5 +61,62 @@ div {
 
 .top-navigation .links li:hover {
 	color: #333333;
+	cursor: pointer;
+}
+
+/*Introduction Section*/
+
+.introduction {
+	background-image: url('../images/background.jpg');
+	background-position: center bottom;
+	background-size: cover;
+	background-repeat: no-repeat;
+	height: 45.938rem;
+	overflow: auto;
+}
+
+.introduction h1,
+.introduction h3 {
+	color: white;
+	text-align: center;
+	font-weight: 300;
+}
+
+.introduction h1 {
+	margin-top: 17.5rem;
+	font-size: 3.125rem;
+}
+
+.introduction h3 {
+	margin-top: 1.25rem;
+	font-size: 1.563rem;
+}
+
+
+/*Buttons*/
+
+
+
+.introduction .buttons {
+	color: white;
+	text-align: center;
+	margin-top: 1.563rem;
+}
+
+button {
+	width: 9.688rem;
+	background-color: #f15a29;
+	border-color: #f15a29;
+	text-shadow: none;
+	border-style: none;
+	border-radius: 4px;
+	padding: 1rem 1.5rem;
+	color: white;
+	font-size: 1.125rem;
+}
+
+button:hover {
+	background-color: #d9400e;
+	border-color: #cf3d0e;
 	cursor: pointer;
 }
