--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@ body {
 	-webkit-font-smoothing: antialiased;
 }
 
+ul {
+	list-style: none;
+}
+
 div {
 	border: 1px solid Chocolate;
 }
@@ -19,7 +23,7 @@ div {
 .content {
 	width: 970px;
 	margin: 0 auto;
-	padding: 0px 15px;
+	padding: 0px 0.938rem;
 	box-sizing: border-box;
 }
 
@@ -91,6 +95,41 @@ div {
 	margin-top: 1.25rem;
 	font-size: 1.563rem;
 }
+
+
+/*Three Case Image Section*/
+
+.cases {
+	background-color: #fff;
+	overflow: hidden;
+	padding-bottom: 5rem;
+}
+
+.cases .content {
+	margin-top: 7.875rem;
+	padding: none;
+	color: #1d1e21;
+	text-align: center;
+}
+
+.cases h2 {
+	font-size: 2.75rem;
+	margin: 1.625rem 0 3.125rem;
+	font-weight: 300;
+}
+
+.cases .devices > li {
+	width: 33.33333333%;
+	float: left;
+}
+
+.cases .devices h3 {
+	font-weight: 400;
+	font-size: 1.563rem;
+	margin: 2.5rem 0px 1.875rem;
+}
+
+
 
 
 /*Buttons*/
