--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,18 @@
+* {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+	box-sizing: border-box;
+}
 html {
 	box-sizing: border-box;
+}
+
+ul {
+	list-style: none;
 }
 
 *, *:before, *:after {
@@ -7,24 +20,23 @@ html {
 }
 
 body {
-	background-color: LightGray;
 	font-family: 'Roboto', sans-serif;
 	-webkit-font-smoothing: antialiased;
 }
 
-ul {
-	list-style: none;
-}
-
 div {
-	border: 1px solid Chocolate;
+	/*border: 1px solid Chocolate;*/
 }
 
 .content {
-	width: 970px;
+	min-width: 37.5rem;
 	margin: 0 auto;
-	padding: 0px 0.938rem;
+	padding: 0 0.938rem;
 	box-sizing: border-box;
+}
+
+:focus {
+	outline: none;
 }
 
 /*Navbar*/
@@ -33,28 +45,29 @@ div {
 	background-color: #fff;
 	position: fixed;
 	width: 100%;
+	border-bottom: 1px solid #DDD;
 	z-index: 9999;
 }
 
 .top-navigation > .content {
-	height: 70px;
+	height: 4.375rem;
 }
 
 .top-navigation .logo {
-	height: 70px;
+	height: 4.375rem;
 }
 
 .top-navigation .links {
 	float: right;
 	font-family: 'Roboto', sans-serif;
-	font-size: 16px;
+	font-size: 1.04rem;
 	color: #838994;
-	margin-top: 25px;
+	margin-top: 1.7rem;
 	-webkit-font-smoothing: antialiased;
 }
 
 .top-navigation .links li {
-	margin-left: 25px;
+	margin-left: 1.563rem;
 	display: inline-block;
 }
 
@@ -130,7 +143,51 @@ div {
 }
 
 
+/*Footer Section*/
 
+.social {
+	background-color: #fff;
+	overflow: auto;
+	text-align: center;
+	padding-bottom: 9.375rem;
+}
+
+.social hr {
+	border: 0;
+	border-top: 1px solid #eaebec;
+	margin: 1.313rem 0;
+}
+
+.social .icons > li {
+	border-radius: 1.25rem;
+	width: 2.5rem;
+	height: 2.5rem;
+	display: inline-block;
+	margin: 1.25rem 5px;
+	border: 1px solid #eaebec;
+	padding: 0.625rem 0;
+	text-align: center;
+
+}
+
+.social .icons > li:hover {
+    cursor: pointer;
+}
+.social .twitter {
+    color: #55acee;
+}
+.social .facebook {
+    color: #4c66a4;
+}
+.social .instagram {
+    color: #3f729b;
+}
+
+.social .copy {
+	font-size: 0.9rem;
+	font-weight: 300;
+	color: #838994;
+}
 
 /*Buttons*/
 
